--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -1,22 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
-    <main>
-      <!-- Student code goes here -->
-    </main>
 
-    <footer>
-      <p>I can code!</p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prework Study Guide</title>
+</head>
+
+<body>
+  <header id="top">
+    <h1>Prework Study Guide</h1>
+    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+  </header>
+  <main>
+    <section class="card" id="" html-section">
+      <h2>HTML</h2>
+
+      <ul>
+
+        <li>Head element contains information about the webpage.</li>
+        <li>Body element represents the visible content shown to the user</li>
+        <li>h1 through to h6 elements represent the size of a heading. Header 1 being the biggest</li>
+        <li>p element represents a paragraph or block of text. Used frequently to wrap most texts on a webpage</li>
+        <li>ul unordered list</li>
+        <li>ol ordered list</li>
+        <li>li list items</li>
+        <li>img contains iformation about images on the webpage</li>
+        <li>src attribute defines the location of the image.</li>
+        <li>a element (anchor) creates links to the same, or other webpages.</li>
+        <li>href attribute points to the URL for the link; example: <a
+            href="https://nationalzoo.si.edu/animals/giant-panda">More About Giant Pandas</a></li>
+
+
+      </ul>
+
+    </section>
+
+    <section class="card" id="" css-section">
+      <h2>CSS</h2>
+
+      <ul>
+        <li>Enter your CSS notes here</li>
+      </ul>
+
+    </section>
+
+    <section class="card" id="git-section">
+      <h2>Git</h2>
+
+      <ul>
+        <li>pwd - displays the current working directory</li>
+        <li>ls - displays the list of files and folders</li>
+        <li>cd - navigates between directories in the path</li>
+        <li>cd .. navigates backwards</li>
+        <li>cd ~ - navigates to user root directory</li>
+        <li>mkdir - creates a new directory (creates a new folder)</li>
+        <li>touch - creates a file inside a directory (eg touch insert_name.txt)</li>
+        <li>git add -A</li>
+        <li>git commit -m "insert message here"</li>
+        <li>git push</li>
+        <li>git clone</li>
+        <li>git reset --hard -nukes everything, always make sure everything you want has been committed before nuking
+        </li>
+        <li>git checkout -b insert branch name creates a new branch and switches to it</li>
+
+    </section>
+
+    <section class="card" id="javascript-section">
+      <h2>JavaScript</h2>
+
+      <ul>
+        <li>Enter Java notes header</li>
+      </ul>
+
+    </section>
+  </main>
+
+  <footer>
+    <p>I can code!</p>
+  </footer>
+</body>
+
 </html>
